Fixed overlapping in Edit Pages

--- a/client/stylesheets/hoolahoops.css
+++ b/client/stylesheets/hoolahoops.css
@@ -426,6 +426,6 @@ div.colorElement:last-child{
   margin-bottom: 0px;
 }
 
-div.reminder{
+/*div.form-group{
 	display: inline-block;
-}
+}*/
